feat(Java): Always Generate in Order